--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url(font.css);
+@import url(nav.css);
 
 html {
     --bg-color: #272932;
@@ -31,5 +32,20 @@ h3 {
     & span {
         color: var(--accent-color);
         font-weight: var(--fat);
+    }
+}
+
+button{
+    border-radius: var(--btn-radius);
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    border-color: var(--primary-color);
+    padding: 0.2em 1em 0.2em 1em;
+    & a{
+        text-decoration: none;
+        color: var(--text-color);
+    }
+    &:hover{
+        filter: var(--btn-hover);
     }
 }
