--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,6 +1,6 @@
 nav {
     display: flex;
-    justify-content:right;
+    justify-content: right;
     align-items: right;
     padding: 1em;
     background-color: var(--bg-color);
@@ -16,11 +16,16 @@ nav {
         justify-content: space-between;
         list-style: none;
         margin: 0;
+        margin-right: 1em;
         padding: 0;
 
         & li {
-            margin-right: 1em;
+            margin-right: .75em;
             padding: 0;
+        }
+
+        & li:nth-child(3) {
+            margin-right: 1em;
         }
 
         & a {
@@ -33,7 +38,8 @@ nav {
         }
     }
 }
-img{
+
+img {
     position: absolute;
     top: .5em;
     left: 0;
