--- a/styles/calc.css
+++ b/styles/calc.css
@@ -93,6 +93,7 @@ fieldset{
     animation-name: shuffle;
   animation-timing-function: ease-in-out;
   animation-duration: 3s;
+  animation-delay: 1s;
   animation-iteration-count: 1;
 }
 
@@ -101,7 +102,7 @@ fieldset{
         transform: translateY(0);
     }
     100% {
-        transform: translateY(-200em);
+        transform: translateY(-200em); 
     }
 }
 
