--- a/styles/home.css
+++ b/styles/home.css
@@ -1,9 +1,3 @@
-.hero{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
 ol{
     list-style: circle;
     padding-inline-start: 1em;
@@ -14,26 +8,62 @@ ol{
     }
 }
 
-div{
-    display: flex;
-    flex-direction: column;
-    margin: auto;
+@media screen and (min-width: 320px){
+    .hero{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    
+    div{
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+    }
+    
+    .content-hero{
+        max-width: 75ch;
+    }
+    
+    .icon{
+        display: none;
+    }
+    
+    .click-me{
+        width: 100%;
+        padding: .75em;
+        font-size: 1.25em;
+    }
+    
+}
+@media screen and (min-width: 768px){
+.hero{
+    flex-direction: row;
 }
 
-.content-hero{
-    max-width: 75ch;
-}
 
 .icon{
     display: flex; 
     justify-content: center;
     align-items: center;
-    height: 75%;
+    height: 250px;
     padding: 1em;
 }
 
-.click-me{
-    width: 100%;
-    padding: .75em;
-    font-size: 1.25em;
+}
+
+
+@media screen and (min-width: 1024px){
+
+.icon{
+    height: 375px;
+}
+
+}
+
+@media screen and (min-width: 1440px){
+    .icon{
+        height: 500px;
+    }
 }
