--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-h1, h3 {
+h1,h2, h3 {
     font-weight: var(--chubby);
     text-align: center;
 }
