--- a/styles/nav.css
+++ b/styles/nav.css
@@ -12,85 +12,108 @@ nav {
     z-index: 1;
 }
 
-@media screen and (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 767px) {
+    .logo {
+        position: absolute;
+        left: 0;
+        height: 60px;
+        width: 60px;
+        margin-left: .25em;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .logo {
+        position: absolute;
+        left: 0;
+        height: 80px;
+        width: 80px;
+        margin-left: 1.25em;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .logo {
+        position: absolute;
+        left: 0;
+        height: 100px;
+        width: 100px;
+        margin-left: 3em;
+    }
+
+}
+
+@media (min-width: 320px) {
     nav {
         & ul {
             display: flex;
             list-style: none;
             margin: 0;
             padding: 0;
+
             & li {
                 margin-left: 1em;
                 padding: 0;
                 position: relative;
                 top: 0;
                 z-index: 1;
+
                 &:first-child {
                     margin-left: 0;
                 }
+
                 & a {
                     text-decoration: none;
                     color: var(--text-color);
+
                     &.new-user {
                         color: var(--accent-color);
                     }
                 }
             }
         }
-        .logo {
-            position: absolute;
-            left: 0;
-            height: 60px;
-            width: 60px;
-            margin-left: .25em;
-        }
-
     }
 }
 
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1023px) {
     nav {
         padding: 1.5em;
+
         & ul {
             & li {
                 margin-left: 1.5em;
             }
         }
     }
-    .logo {
-        height: 80px;
-        width: 80px;
-    }
 }
 
-@media screen and (min-width: 1024px) {
+@media (min-width: 1024px) {
     nav {
         & ul {
             justify-content: space-between;
             margin-right: 1em;
+
             & li {
                 margin-right: .75em;
                 padding: 0;
             }
+
             & li:nth-child(3) {
                 margin-right: 1em;
             }
+
             & a {
                 text-decoration: none;
                 color: var(--text-color);
+
                 &:hover {
                     color: var(--accent-color);
                 }
+
                 &.new-user:hover {
                     filter: brightness(125%);
                 }
             }
         }
-    }
-    .logo {
-        top: .5em;
-        height: 100px;
-        width: 100px;
-        margin-left: 3em;
     }
 }
