--- a/styles/calc.css
+++ b/styles/calc.css
@@ -38,12 +38,53 @@ em {
     font-weight: var(--fat);
 }
 
+main{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 5em;
+    margin-bottom:2em;
+}
+
+.background-scorecard{
+    display: flex;
+    background-color: #FB8B24;
+}
+.scorecard{
+    position: relative;
+    left: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--second-color);
+    border-radius: 1.5em;
+    border: 5px solid var(--text-color);
+    padding: 1em;
+    margin: 1em;
+    text-align: center;
+    height: 25em;
+    width: 15em;
+
+    & .icon{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        height:125px;
+        width: 120px;
+    }
+}
+
+.questioncard{
+    display: inline-flex;
+    flex-direction: row;
+    background-color: #FB8B24;
+}
 .card{
     display: flex;
     flex-direction: column;
     justify-content: center;
     position: absolute;
-    right: 35%;
+    right: 15%;
     background-color: var(--second-color);
     border-radius: 1.5em;
     border: 5px solid var(--text-color);
