forgot to use something

--- a/styles/calc.css
+++ b/styles/calc.css
@@ -31,6 +31,7 @@ h1, h3 {
     font-family: 'poppins', sans-serif;
     font-weight: var(--chubby);
     text-align: center;
+    text-transform: var(--cap);
 }
 
 em {
