--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,11 @@ a{
     font-weight: var(--chubby);
     box-shadow: 0px 0px 5px var(--btn-shadow);
 
+    &.full{
+        width: 75%;
+        margin-top: .25em;
+        margin-bottom: 2.75em;
+    }
     &:hover{
         filter: var(--btn-hover);
         cursor: pointer;
