--- a/styles/home.css
+++ b/styles/home.css
@@ -14,7 +14,7 @@ ol{
         flex-direction: column;
         justify-content: center;
         background-color: var(--second-color);
-        border-radius: 2.5em;
+        border-radius: var(--section-radius);
     }
     
     
