--- a/styles/home.css
+++ b/styles/home.css
@@ -15,6 +15,8 @@ ol{
         justify-content: center;
         background-color: var(--second-color);
         border-radius: var(--section-radius);
+        width: 85%;
+        padding: 1em;
     }
     
     
@@ -33,7 +35,7 @@ ol{
     }
     
     .click-me{
-        width: 100%;
+        width: 50%;
         padding: .75em;
         font-size: 1.25em;
     }
