--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,9 @@
 html {
     --bg-color: #272932;
     --text-color: #ecf8f8;
-    --primary-color: #947eb0;
-    --second-color: #519879;
-    --accent-color: #FB8B24;
+    --primary-color: #9EDEDD;
+    --second-color: #2A5A7D;
+    --accent-color: #467FC1;
     --btn-radius: 2.5em;
     --btn-shadow:#716088;
     --section-radius: .25em;
