--- a/styles/style.css
+++ b/styles/style.css
@@ -6,9 +6,9 @@ html {
     --text-color: #ecf8f8;
     --primary-color: #9EDEDD;
     --second-color: #274248;
-    --accent-color: #467FC1;
+    --accent-color: #7251C4;
     --btn-radius: 2.5em;
-    --btn-shadow:#9EDEDD;
+    --btn-shadow:#8060d0;
     --section-radius: .25em;
     --icon-radius: 3.25em;
     --cap: capitalize;
