--- a/styles/calc.css
+++ b/styles/calc.css
@@ -145,47 +145,11 @@ fieldset{
 }
 
 @keyframes shuffle {
-    0% {transform: translate(0);}
-    2.5% {transform: translate(-1em, 1em) rotate(1deg);}
-    5% {transform: translate(-2em, 2em) rotate(2deg);}
-    7.5% {transform: translate(-3em, 3em) rotate(3deg);}
-    10% {transform: translate(-5em, 5em) rotate(5deg);}
-    12.5% {transform: translate(-6em, 6em) rotate(6deg);}
-    15% {transform: translate(-7.5em, 7.5em) rotate(7deg);}
-    17.5% {transform: translate(-8em, 8em) rotate(10deg);}
-    20% {transform: translate(-10em, 10em) rotate(11deg); }
-    22.5% {transform: translate(-11.5em, 11.5em) rotate(12deg);}
-    25% {transform: translate(-12.5em, 12.5em) rotate(13deg);}
-    27.5% {transform: translate(-13.5em, 13.5em) rotate(14deg);}
-    30% {transform: translate(-15em, 15em) rotate(16deg);}
-    32.5% {transform: translate(-16.5em, 16.5em) rotate(17deg);}
-    35% {transform: translate(-17.5em, 17.5em) rotate(18deg);}
-    37.5% {transform: translate(-18.5em, 18.5em) rotate(20deg);}
-    40% {transform: translate(-20em, 20em) rotate(21deg);}
-    42.5% {transform: translate(-21.5em, 21.5em) rotate(22deg);}
-    45% {transform: translate(-22.5em, 22.5em) rotate(24deg);}
-    47.5% {transform: translate(-23.5em, 23.5em) rotate(25deg);}
-    50% {transform: translate(-25em, 25em) rotate(26deg);}
-    52.5% {transform: translate(-26.5em, 26.5em) rotate(27deg);}
-    55% {transform: translate(-27.5em, 27.5em) rotate(29deg);}
-    57.5% {transform: translate(-28.5em, 28.5em) rotate(30deg);}
-    60% {transform: translate(-30em, 30em) rotate(31deg);}
-    62.5% {transform: translate(-31.5em, 31.5em) rotate(32deg);}
-    65% {transform: translate(-32.5em, 32.5em) rotate(33deg);}
-    67.5% {transform: translate(-33.5em, 33.5em) rotate(35deg);}
-    70% {transform: translate(-35em, 35em) rotate(36deg);}
-    72.5% {transform: translate(-36.5em, 36.5em) rotate(37deg);}
-    75% {transform: translate(-37.5em, 37.5em) rotate(39deg);}
-    77.5% {transform: translate(-38.5em, 38.5em) rotate(40deg);}
-    80% {transform: translate(-40em, 40em) rotate(41deg);}
-    82.5% {transform: translate(-41.5em, 41.5em) rotate(42deg);}
-    85% {transform: translate(-42.5em, 42.5em) rotate(44deg);}
-    87.5% {transform: translate(-43.5em, 43.5em) rotate(45deg);}
-    90% {transform: translate(-45em, 45em) rotate(46deg);}
-    92.5% {transform: translate(-46.5em, 46.5em) rotate(48deg);}
-    95% {transform: translate(-47.5em, 47.5em) rotate(49deg);}
-    97.5% {transform: translate(-48.5em, 48.5em) rotate(50deg);}
-    100% {transform: translate(-50, 50em) rotate(52deg);}
+    0% {transform: translate(0); filter:opacity(1);}
+    25% {transform: translate(-6em, 6em) rotate(13deg); filter:opacity(.75);}
+    50% {transform: translate(-12em, 12em) rotate(26deg); filter:opacity(.5);}
+    75% {transform: translate(-15em, 15em) rotate(39deg); filter:opcity(.25);}
+    100% {transform: translate(-18em, 18em) rotate(52deg); filter:opacity(0)}
 }
 
 .hide {
