--- a/styles/nav.css
+++ b/styles/nav.css
@@ -66,7 +66,7 @@ nav {
                     text-decoration: none;
                     color: var(--text-color);
 
-                    &.new-user {
+                    &.active-tab {
                         color: var(--primary-color);
                     }
                 }
