--- a/styles/overview.css
+++ b/styles/overview.css
@@ -1,11 +1,34 @@
-.card-container {
+.intro-text{
+    max-width: 75ch;
+    margin-top: .5em;
+    margin-bottom: 1.25em;
+    margin-left: 1em;
+}
+.card-container{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    margin: auto;
+    box-sizing: border-box;
 }
 
-.card {
-    border: 1px solid #000;
-    padding: 20px;
-    width: 18%;
-    text-align: center;
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 17.5%;
+    height: 400px;
+    padding: 1em;
+    margin: auto;
+    box-sizing: border-box;
+    border-radius: var(--border-radius);
+    background-color: var(--second-color);
+    box-shadow: 0px 0px 24px #2742489d;
+}
+
+.small-img{
+    display: block;
+    width: 125px;
+    height: 125px;
+    margin: auto;
 }
