--- a/styles/style.css
+++ b/styles/style.css
@@ -83,4 +83,11 @@ a{
     border-width: 0;
     font-weight: var(--chubby);
     box-shadow: 0px 0px 5px var(--btn-shadow);
+    &.inline{
+        display: inline-block;
+        margin: 0;
+        padding: 0.25em;
+        font-weight: 400;
+        font-size: 1em;
+    }
 }
