--- a/styles/calc.css
+++ b/styles/calc.css
@@ -152,3 +152,23 @@ fieldset{
     display: none;
 }
 
+input[name="1"]:checked{
+    outline: solid red 2px;
+    filter: brightness(150%) saturate(150%);
+}
+input[name="2"]:checked{
+    outline: solid red 2px;
+    filter: brightness(150%) saturate(150%);
+}
+input[name="3"]:checked{
+    outline: solid red 2px;
+    filter: brightness(150%) saturate(150%);
+}
+input[name="4"]:checked{
+    outline: solid red 2px;
+    filter: brightness(150%) saturate(150%);
+}
+input[name="5"]:checked{
+    outline: solid red 2px;
+    filter: brightness(150%) saturate(150%);
+}
